# delattest

./: .dockerignore  .gitignore  Cargo.toml  Makefile  Memo.txt  README.md  app-from-image  delattest.manifest  wasm-runner  wasm-runner.manifest  wasm-runner.manifest.template
docker/: Dockerfile
docs/: 260709-data-lifecycle-spec.md  260710-signature-auth-and-program-upload-workplan.md  data-lifecycle-spec.md  system-manual.md
scripts/: build.sh  runner-cli.sh
src/: main.rs
wasm_module/: Dockerfile  Makefile  hello.c
wasm_module/hello1/: main.c
wasm_module/hello2/: main.c
wasm_module/passman/: Makefile  README.md  exec_wasm.sh  main.c
wasm_module/readinput/: Makefile  main.c
wasm_runner/: .dockerignore  Cargo.toml  Dockerfile  Makefile  SPEC.md  api_test.go  attestation.go  auth.go  auth_test.go  go.mod  handlers.go  lifecycle.go  lifecycle_test.go  main.go  owner.go  owner_test.go  programs.go  programs_test.go  sandbox.go  sandbox_test.go  storage.go  users.go  users_test.go  wasm_test.go
wasm_runner/src/: main.rs  usage.txt
wasm_runner/testdata/: readinput.wasm
