[package]
name = "wasm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

# Hyper 1.x 系
hyper = { version = "1.7", features = ["http1"] }
hyper-util = { version = "0.1.17", features = ["server", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"

tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }

# Wasmtime 36（LTS） + WASI Preview 2
wasmtime = { version = "36", features = ["component-model", "async"] }
wasmtime-wasi = "36"
